# rust-congratulator-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
etc/: app-config.toml  app-config.toml.template
src/: helpers.rs  main.rs
src/api/: error.rs  helpers.rs  mod.rs  requests.rs  task.rs
src/bot/: config.rs  error.rs  mod.rs  tasks.rs
src/dashboard/: analyzer.rs  mod.rs
src/dashboard/score_table/: entities.rs  error.rs  mod.rs
