[package]
name = "rust-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = [
    "rt-multi-thread", 
    "macros"
] }
google-sheets4 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
chrono = "*"
itertools = "*"
cargo-watch = "8.4.0"
