[package]
name = "rust-congratulator-bot"
version = "0.1.0"
edition = "2021"
authors = [ "Boris Siniapkin boris.works@hotmail.com" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = [
    "rt-multi-thread", 
    "macros"
] }
tokio_schedule = "^0.3"
google-sheets4 = "^5.0"
hyper = "^0.14"
hyper-rustls = "^0.22"
chrono = "^0.4"
itertools = "^0.11.0"
serde = { version = "^1.0", features = ["derive"] }
config = "0.13.1"